--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,15 @@ deploy:
     skip_cleanup: true
     on:
       tags: true
-script:
-    ./gradlew :app:build :app:connectedDebugAndroidTest
+script: ./gradlew :app:build :app:connectedDebugAndroidTest
+env:
+  global:
+    - MALLOC_ARENA_MAX=2
+
+sudo: required
+
+before_script:
+    - echo no | android create avd --force -n test -t android-21 --abi armeabi-v7a-s "768x1280"
+    - emulator -avd test -no-skin -no-audio -no-window &
+    - adb wait-for-device
+    - adb shell input keyevent 82 &
