--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.neenbedankt.android-apt'
 
 android {
     compileSdkVersion 23
@@ -24,4 +25,25 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.2.1'
     compile 'com.android.support:design:23.2.1'
+
+    //Retrofit and GSON
+    compile 'com.squareup.retrofit2:retrofit:2.0.0-beta4'
+    compile 'com.squareup.retrofit2:converter-gson:2.0.0-beta4'
+    compile 'com.google.code.gson:gson:2.4'
+
+    //Glide
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+
+    //Eventbus
+    compile 'org.greenrobot:eventbus:3.0.0'
+
+    //Butterknife
+    compile 'com.jakewharton:butterknife:7.0.1'
+
+    //Dagger 2
+    compile 'com.google.dagger:dagger:2.0.1'
+    apt "com.google.dagger:dagger-compiler:2.0.1"
+
+    // Needed for @Generated annotation (missing in Java <= 1.6; therefore, Android)
+    compile 'javax.annotation:jsr250-api:1.0'
 }
