Lint invalid package workaround changed
https://github.com/codepath/android_guides/wiki/Consuming-APIs-with-Retrofit#issues

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ android {
         }
     }
     lintOptions {
-        warning 'InvalidPackage'
+        lintConfig rootProject.file('gradle/lint.xml')
     }
 }
 
