--- a/api-description/country-info.yaml
+++ b/api-description/country-info.yaml
@@ -5,7 +5,7 @@ swagger: '2.0'
 info:
   title: CountryInfo API
   description: API description for CountryInfo application 
-  version: "0.1.2"
+  version: "0.1.3"
 host: example.country.hu
 schemes:
   - http
@@ -281,7 +281,8 @@ definitions:
     type: object
     properties:
       id:
-        type: string
+        type: integer
+        format: int64
       name:
         type: string
       region:
