--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,9 @@ dependencies {
     //Eventbus
     compile 'org.greenrobot:eventbus:3.0.0'
 
+    //Sugar ORM
+    compile 'com.github.satyan:sugar:1.4'
+
     //Butterknife
     compile 'com.jakewharton:butterknife:7.0.1'
 
