--- a/api-description/country-info.yaml
+++ b/api-description/country-info.yaml
@@ -5,7 +5,7 @@ swagger: '2.0'
 info:
   title: CountryInfo API
   description: API description for CountryInfo application 
-  version: "0.1.3"
+  version: "0.1.4"
 host: example.country.hu
 schemes:
   - http
@@ -284,6 +284,8 @@ definitions:
         type: integer
         format: int64
       name:
+        type: string
+      capital:
         type: string
       region:
         type: string
